Setup temperature readout
Todo: sensor lib calls are too slow, messes with average power readout

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB0
+lib_deps = 
+	milesburton/DallasTemperature@^3.11.0
+	paulstoffregen/OneWire@^2.3.7
